--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Create Prereq. Azure Resources
         run: |
           az login --service-principal   -u "$CLIENT_ID" -p "$CLIENT_SECRET" -t "$TENANT_ID"
-          az group create                -g "$RESOURCE_GROUP" -l southcentralus --tags "CostElement=YWED10528906" "CompanyCode=0322" "environment=dev" "OwnerEmail=matthew.chenette@chevron.com"
+          az group create                -g "$RESOURCE_GROUP" -l southcentralus --tags "CostElement=YWED10528906" "CompanyCode=0322" "environment=dev" "OwnerEmail=sam.kaplan@chevron.com"
           az group wait                  -g "$RESOURCE_GROUP" --created 
           az sig create                  -g "$RESOURCE_GROUP" -r "$GALLERY_NAME"
           az sig image-definition create -g "$RESOURCE_GROUP" -r "$GALLERY_NAME" -i "$IMAGE_NAME" -p "canonical" -f "0001-com-ubuntu-server-focal" -s "20_04-lts" --os-type linux
@@ -47,14 +47,14 @@ jobs:
       - name: Template the Packer Image file
         uses: cuchi/jinja2-action@v1.2.0
         with:
-          template: /home/runner/work/AzManagers.jl/AzManagers.jl/templates/cofii-base.json.j2
-          output_file: /home/runner/work/AzManagers.jl/AzManagers.jl/templates/cofii-base.json
+          template: /home/runner/work/AzManagers.jl/AzManagers.jl/test/templates/cofii-base.json.j2
+          output_file: /home/runner/work/AzManagers.jl/AzManagers.jl/test/templates/cofii-base.json
 
       - name: Template the AzManagers Setup script
         uses: cuchi/jinja2-action@v1.2.0
         with:
-          template: /home/runner/work/AzManagers.jl/AzManagers.jl/templates/azmanagers-setup.jl.j2
-          output_file: /home/runner/work/AzManagers.jl/AzManagers.jl/templates/azmanagers-setup.jl
+          template: /home/runner/work/AzManagers.jl/AzManagers.jl/test/templates/azmanagers-setup.jl.j2
+          output_file: /home/runner/work/AzManagers.jl/AzManagers.jl/test/templates/azmanagers-setup.jl
 
       - name: Install Packer
         run: |
@@ -63,7 +63,7 @@ jobs:
           sudo apt-get update && sudo apt-get install packer
 
       - name: Build Packer Image
-        run: packer build -color=false -timestamp-ui /home/runner/work/AzManagers.jl/AzManagers.jl/templates/cofii-base.json
+        run: packer build -color=false -timestamp-ui /home/runner/work/AzManagers.jl/AzManagers.jl/test/templates/cofii-base.json
 
       - name: Create Master VM
         run: |
