--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ AzSessions = "1"
 HTTP = "0.8, 0.9"
 JSON = "0.21"
 MPI = "0.14, 0.15, 0.16"
-julia = "1"
+julia = "^1.4"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
