--- a/Project.toml
+++ b/Project.toml
@@ -26,7 +26,8 @@ MPI = "0.14, 0.15, 0.16"
 julia = "^1.4"
 
 [extras]
+TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["TOML", "Test"]
