--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -23,7 +23,7 @@ jobs:
 
     strategy:
       matrix:
-        julia-version: [1.6 1.7]
+        julia-version: [1.6, 1.7]
         os: [ubuntu-latest]
 
     steps:
