--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "AzManagers"
 uuid = "db05ebb0-6096-11e9-199b-87b703361841"
 authors = ["samtkaplan <sam.kaplan@chevron.com>"]
-version = "2.10.2"
+version = "3.0.0"
 
 [deps]
 AzSessions = "f239b30d-ae6b-58be-a2d5-7e9f30e280a9"
@@ -23,9 +23,9 @@ TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
 [compat]
-AzSessions = "1"
+AzSessions = "2"
 CodecZlib = "0.7"
-HTTP = "0.8, 0.9"
+HTTP = "1"
 JSON = "0.21"
 MPI = "0.14, 0.15, 0.16, 0.17, 0.18, 0.19"
 TOML = "1"
