--- a/Project.toml
+++ b/Project.toml
@@ -27,7 +27,7 @@ AzSessions = "2"
 CodecZlib = "0.7"
 HTTP = "1"
 JSON = "0.21"
-MPI = "0.14, 0.15, 0.16, 0.17, 0.18, 0.19"
+MPI = "0.14, 0.15, 0.16, 0.17, 0.18, 0.19, 0.20"
 TOML = "1"
 julia = "^1.4"
 
