--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: Build Packer Image
         run: |
-          echo "resource group=${RESOURCE_GROUP},${var.resource_group}"
+          echo "resource group=${RESOURCE_GROUP}"
           packer build -color=false -timestamp-ui -var 'tenant_id=${TENANT_ID}' -var 'subscription_id=${SUBSCRIPTION_ID}' -var 'client_id=${CLIENT_ID}' -var 'client_secret=${CLIENT_SECRET}' -var 'resource_group=${RESOURCE_GROUP}' -var 'image_name=${IMAGE_NAME}' -var 'julia_version=${JULIA_VERSION}' -var 'commit_sha=${COMMIT_SHA}' -var 'virtual_network_name=${VNET_NAME}' -var 'gallery_name=${GALLERY_NAME}' ${GITHUB_WORKSPACE}/test/templates/image.pkr.hcl 
 
       - name: Create Master VM
