--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         version:
           - 1.6
-          - 1 # automatically expands to the latest stable 1.x release of Julia
+          - 1.9
         os:
           - ubuntu-latest
         arch:
@@ -32,7 +32,7 @@ jobs:
       NSG_NAME: "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}-nsg"
       SUBNET_NAME: "default"
       COMMIT_SHA: "${{ github.sha }}"
-      JULIA_VERSION: "1.9"
+      JULIA_VERSION: "${{ matrix.version }}"
     steps:
       - uses: actions/checkout@v2
 
