--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,7 @@ jobs:
       PKR_VAR_virtual_network: "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}-vnet"
       PKR_VAR_virtual_subnet: "default"
       PKR_VAR_julia_version: "${{ matrix.version }}"
+      PKR_VAR_gallery: "${{ github.run_id }}${{ matrix.julia-version }}gallery"
     steps:
       - uses: actions/checkout@v3
 
