--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,9 +43,9 @@ jobs:
         run: |
           JULIA_VERSION=$(julia -e 'print(stdout, VERSION)')
           JULIA_VERSION_SPLIT=(${JULIA_VERSION//./ })
-          JULIA_VERSION_MAJOR=${VERSION_SPLIT[0]}
-          JULIA_VERSION_MINOR=${VERSION_SPLIT[1]}
-          JULIA_VERSION_PATCH=${VERSION_SPLIT[2]}
+          JULIA_VERSION_MAJOR=${JULIA_VERSION_SPLIT[0]}
+          JULIA_VERSION_MINOR=${JULIA_VERSION_SPLIT[1]}
+          JULIA_VERSION_PATCH=${JULIA_VERSION_SPLIT[2]}
           echo "julia version is $JULIA_VERSION"
           echo "julia version major is $JULIA_VERSION_MAJOR"
           echo "julia version minor is $JULIA_VERSION_MINOR"
